# adventofcode

./: .editorconfig  .gitignore  README.md
haskell/: Common.hs  adventofcode.cabal  configure  fourmolu.yaml  solution01.hs  solution02.hs  solution03.hs  solution04.hs  solution05.hs  solution06.hs  solution07.hs  solution08.hs
haskell/common/: Common.hs
haskell/common/Common/: Chain.hs  Pot.hs  Test.hs
haskell/solutions/: solution01.hs  solution02.hs  solution03.hs  solution04.hs  solution05.hs  solution06.hs  solution07.hs  solution08.hs  solution09.hs  solution10.hs  solution11.hs  solution12.hs  solution13.hs  solution14.hs  solution15.hs
rubies/: day01-first.rb  day01-second.rb  day02-first.rb  day02-second.cr  day03-first.rb
rust/: Cargo.toml
solutions/: q10.hs  q12.hs  q13.hs  q14.hs  q3.hs  q4.hs  q5.hs  q6.hs  q7.hs  q8.hs  q8.js  q9.hs
