cabal-version: 3.4
name: adventofcode
version: 2021.1.0.0
author: Xnuk Shuman
license: AGPL-3.0-or-later

common deps
  build-depends:
    , base > 4.14 && < 5
    , containers
    , hashable
    , safe
    , text
    , transformers
    , unordered-containers
    , bytestring

  ghc-options:
    -dynamic
    -Weverything
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
    -Wno-unused-packages
    -Wno-implicit-prelude
    -Wno-missing-local-signatures
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-safe-haskell-mode
    -Wno-unused-do-bind

  default-extensions:
    BlockArguments
    FlexibleInstances
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    TupleSections
    TypeApplications
    TypeSynonymInstances
    MultiWayIf
    ConstraintKinds
    -- QualifiedDo

library
  import: deps
  hs-source-dirs: common
  exposed-modules: Common, Common.Chain, Common.Pot

  default-extensions:
    NoImplicitPrelude

common exe
  import: deps
  build-depends: adventofcode

  mixins:
    , base hiding (Prelude)
    , adventofcode (Common as Prelude)
    , adventofcode

-- @generated

executable solution01
  import: exe
  main-is: solutions/solution01.hs

executable solution02
  import: exe
  main-is: solutions/solution02.hs

executable solution03
  import: exe
  main-is: solutions/solution03.hs

executable solution04
  import: exe
  main-is: solutions/solution04.hs

executable solution05
  import: exe
  main-is: solutions/solution05.hs

executable solution06
  import: exe
  main-is: solutions/solution06.hs

executable solution07
  import: exe
  main-is: solutions/solution07.hs

executable solution08
  import: exe
  main-is: solutions/solution08.hs

executable solution09
  import: exe
  main-is: solutions/solution09.hs

executable solution10
  import: exe
  main-is: solutions/solution10.hs

executable solution11
  import: exe
  main-is: solutions/solution11.hs

executable solution12
  import: exe
  main-is: solutions/solution12.hs

executable solution13
  import: exe
  main-is: solutions/solution13.hs
